[package]
name = "mpf-spike"
version = "0.1.0"
authors = ["Jan Kantert <jan-mpf@kantert.net>"]
edition = "2018"

[dependencies]
timeout-readwrite = "0.1"
nix = "0.13.0"
termios = "0.3"
libc = "0.2.49"
log = "0.4"
stderrlog = "0.4"

[dev-dependencies]
lazy_static = "1.3.0"

[profile.release]
lto = true
